<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{153a8a10-247c-4ad7-bc40-fd42c82f98bb}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	//Input
	bStart : BOOL;
	bStop : BOOL;
	bSensorLeft : BOOL;
	bLimitLeft : BOOL;
	bLimitRight : BOOL;
	
	//Output
	bMotorLeft : BOOL;
	bMotorRight : BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>